--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -12,19 +12,19 @@
     <link rel="author" href="https://plus.google.com/{{site.gplus}}"/>
     <link rel="publisher" href="https://plus.google.com/{{site.gplus}}"/>
     <!-- SEO -->
-    <link rel="canonical" href="{{site.url}}{{page.url}}" />
+    <link rel="canonical" href="//dlion.it/{{page.url}}" />
     <!-- Schema.org markup for Google+ -->
     <meta itemprop="name" content="{{site.description_name}} | {{site.description_blog}} | {{page.title}}">
     <meta itemprop="description" content="{{page.description}}">
-    <meta itemprop="image" content="{{site.url}}/public/img/pic.jpg">
+    <meta itemprop="image" content="//dlion.it/public/img/pic.jpg">
     <!-- Open Graph data -->
     <meta property="og:locale" content="it_IT" />
     <meta property="og:type" content="website" />
     <meta property="og:title" content="{{site.description_name}} | {{site.description_blog}} | {{page.title}}" />
     <meta property="og:description" content="{{page.description}}" />
-    <meta property="og:url" content="{{site.url}}{{page.url}}" />
+    <meta property="og:url" content="//dlion.it/{{page.url}}" />
     <meta property="og:site_name" content="{{site.description_name}} | {{site.description_blog}} | {{page.title}}" />
-    <meta property="og:image" content="{{site.url}}/public/img/pic.jpg" />
+    <meta property="og:image" content="//dlion.it/public/img/pic.jpg" />
     <!-- Twitter Card data -->
     <meta name="twitter:card" value="summary">
     <meta name="twitter:site" content="{{site.twitter}}">
@@ -32,9 +32,9 @@
     <meta name="twitter:description" content="{{page.description}}">
     <meta name="twitter:creator" content="{{site.twitter}}">
     <meta name="twitter:creator:id" content="{{site.twitter}}">
-    <meta name="twitter:image:src" content="{{site.url}}/public/img/pic.jpg">
-    <meta name="twitter:image" content="{{site.url}}/public/img/pic.jpg">
-    <meta name="twitter:domain" content="{{site.url}}{{page.url}}">
+    <meta name="twitter:image:src" content="//dlion.it/public/img/pic.jpg">
+    <meta name="twitter:image" content="//dlion.it/public/img/pic.jpg">
+    <meta name="twitter:domain" content="//dlion.it/{{page.url}}">
     <!-- FINE SEO -->
 
     <!-- FOUNDATION -->
@@ -43,8 +43,8 @@
     <link rel="stylesheet" href="/public/css/custom.css" />
     <link rel="stylesheet" href="/public/css/syntax.css" />
     <link rel="stylesheet" href="/public/foundation-icons/foundation-icons.css" />
-    <link rel="alternate" type="application/rss+xml" title="{{ site.description_name }} | {{ site.description_blog }}" href="{{ site.url }}/feed/">
-    <link rel="shortcut icon" href="{{ site.url }}/favicon.ico">
+    <link rel="alternate" type="application/rss+xml" title="{{ site.description_name }} | {{ site.description_blog }}" href="//dlion.it/feed/">
+    <link rel="shortcut icon" href="//dlion.it/favicon.ico">
     <script src="/public/js/vendor/modernizr.js"></script>
     <script src="/public/js/cookies-enabler.min.js"></script>
     <style>
@@ -78,7 +78,7 @@
     <nav class="top-bar" data-topbar>
         <ul class="title-area">
             <li class="name">
-                <h1><a href="{{site.url}}/"><span class="element">{{site.description_name}}</span> | <span id="titolettoNavbar">{{site.description_blog}}</span></a></h1>
+                <h1><a href="//dlion.it/"><span class="element">{{site.description_name}}</span> | <span id="titolettoNavbar">{{site.description_blog}}</span></a></h1>
             </li>
              <li class="toggle-topbar menu-icon"><a href="#"></a></li>
         </ul>
@@ -100,7 +100,7 @@
     <div class="container">
         <div class="row text-center titolone">
             <div class="large-5 large-offset-1 columns" >
-                <h1 id="titoloNome"><a href="{{site.url}}/">{{site.description_name}}</a></h1>
+                <h1 id="titoloNome"><a href="//dlion.it/">{{site.description_name}}</a></h1>
             </div>
             <div class="large-6 large-centered columns" >
                 <h1 id="titoloDescr" class="large-text-left">{{site.description_blog}}</h1>
@@ -130,7 +130,7 @@
         <div class="large-4 large-text-left columns aboutMeFull">
             <h4>Author</h4>
             <div class="large-4 small-5 columns">
-                <img src="{{site.url}}/public/img/pic.jpg" width="90px"></img>
+                <img src="//dlion.it/public/img/pic.jpg" width="90px"></img>
             </div>
             <div class="large-8 small-7 columns">
                 <ul class="large-block-grid-3 small-block-grid-3 contentAboutMePost">
@@ -159,10 +159,10 @@
             <a href="https://twitter.com/intent/tweet?url={{ site.url }}{{page.url}}&text={{page.title }}&via=dlion92" target="_blank">
                 <i class="fi-social-twitter"></i>
             </a>
-            <a href="https://www.facebook.com/sharer/sharer.php?u={{site.url}}{{page.url}}" target="_blank">
+            <a href="https://www.facebook.com/sharer/sharer.php?u=//dlion.it/{{page.url}}" target="_blank">
                 <i class="fi-social-facebook"></i>
             </a>
-            <a href="https://plus.google.com/share?url={{site.url}}{{page.url}}" target="_blank">
+            <a href="https://plus.google.com/share?url=//dlion.it/{{page.url}}" target="_blank">
                 <i class="fi-social-google-plus"></i>
             </a>
         </div>
