--- a/_sass/_blockquotes.scss
+++ b/_sass/_blockquotes.scss
@@ -1,5 +1,6 @@
 blockquote {
-  border-left: 5px solid #7a7a7a;
+ /* border-left: 5px solid #7a7a7a; */
+
   font-style: italic;
   margin-left: $space-1;
   padding: $space-1;
