--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -18,11 +18,21 @@ html, body {
   min-height: 100%;
 }
 
+.avatar {
+  max-width: 100%;
+}
+
 img {
   max-width: 100%;
   display: block;
   margin-left: auto;
   margin-right: auto;
+}
+
+.avatar {
+  display: inline;
+  margin-left: 0px;
+  margin-right: 0px;
 }
 
 em img {
